--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-    "name": "@1inch/calldata-compressor",
+    "name": "@deta/calldata-compressor",
     "version": "0.0.1",
-    "description": "1inch calldata compressor",
+    "description": "deta calldata compressor",
     "repository": {
         "type": "git",
-        "url": "git@github.com:1inch/calldata-compressor.git"
+        "url": "git@github.com:deta/calldata-compressor.git"
     },
     "license": "MIT",
     "dependencies": {
         "@openzeppelin/contracts": "4.9.0"
     },
     "devDependencies": {
-        "@1inch/solidity-utils": "2.2.27",
+        "@deta/solidity-utils": "2.2.27",
         "@nomicfoundation/hardhat-chai-matchers": "1.0.6",
         "@nomicfoundation/hardhat-network-helpers": "1.0.8",
         "@nomiclabs/hardhat-ethers": "2.2.3",
